bug-fix: preview image in wrong position on portfolio pages

--- a/styles/portfolio-styles.css
+++ b/styles/portfolio-styles.css
@@ -161,6 +161,7 @@ main .container #portfolio-list li img {
     transition: transform .5s;
     cursor: pointer;
     object-fit: cover;
+    object-position: top;
 }
 
 main .container #portfolio-list li img:hover {
